[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/death.png" type="Texture" id=1]
[ext_resource path="res://death_enemy.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 1
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.588235, 0.588235, 0.588235, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 1
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.588235 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 1

[sub_resource type="CapsuleShape2D" id=5]
radius = 28.0
height = 110.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 30.0
height = 110.0

[sub_resource type="Curve" id=7]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 1.0
angle_curve = SubResource( 8 )
scale = 8.0
scale_random = 1.0
scale_curve = SubResource( 10 )
color = Color( 1, 0.772549, 0, 1 )

[node name="DeathEnemy" type="KinematicBody2D" groups=[
"death",
"enemies",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
margin_left = 140.0
margin_top = 662.0
margin_right = 1140.0
margin_bottom = 682.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armor" type="ProgressBar" parent="CanvasLayer"]
margin_left = 440.0
margin_top = 630.0
margin_right = 840.0
margin_bottom = 650.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 68.7552, 0 )
shape = SubResource( 5 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 68.7474, 0 )
shape = SubResource( 6 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 79.9057, 60.9868 )
amount = 30
local_coords = false
process_material = SubResource( 11 )

[node name="Mine" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="timeout" from="Mine" to="." method="_on_Mine_timeout"]
